--- a/.github/workflows/publish_to_docker_hub.yml
+++ b/.github/workflows/publish_to_docker_hub.yml
@@ -10,19 +10,21 @@ jobs:
       - name: Check out the repo
         uses: actions/checkout@v2
 
-      - name: Set up Docker Buildx        
+      - name: Set up Docker Buildx
+        id: buildx
         uses: docker/setup-buildx-action@v1
 
       - name: Login to DockerHub
         uses: docker/login-action@v1
-        with:
-          registry: docker.pkg.github.com
+        with:          
           username: ${{ secrets.DOCKER_HUB_LOGIN }}
           password: ${{ secrets.DOCKER_HUB_PASSWORD }}      
 
-      - name: Build and push        
+      - name: Build and push
+        id: docker_build
         uses: docker/build-push-action@v2
-        with:          
+        with:
+          builder: ${{ steps.buildx.outputs.name }}
           context: ./
           file: ./Dockerfile
           target: test
