--- a/.github/workflows/publish_to_docker_hub.yml
+++ b/.github/workflows/publish_to_docker_hub.yml
@@ -23,13 +23,20 @@ jobs:
       - name: Build and push
         id: docker_build
         uses: docker/build-push-action@v2
-        with:
-          builder: ${{ steps.buildx.outputs.name }}
+        with:         
           context: ./
           file: ./Dockerfile
           target: test
           platforms: linux/amd64
           push: true
-          tags: user/app:latest       
+          tags: user/app:latest  
+
+      - name: Docker Hub Description
+        if: github.event_name != 'pull_request' && startsWith(github.ref, 'refs/tags/') && success()
+        uses: peter-evans/dockerhub-description@v2.0.0
+        env:
+          DOCKERHUB_USERNAME: ${{ secrets.DOCKER_HUB_LOGIN }}
+          DOCKERHUB_PASSWORD: ${{ secrets.DOCKER_HUB_PASSWORD }}
+          DOCKERHUB_REPOSITORY: ${{ secrets.DOCKER_HUB_REPOSITORY }}     
   
       
