Changing Github Actions File

--- a/.github/workflows/publish_to_docker_hub.yml
+++ b/.github/workflows/publish_to_docker_hub.yml
@@ -32,6 +32,7 @@ jobs:
           context: .
           file: ./Dockerfile          
           platforms: linux/amd64
+          build-args: BUILD_ENV=development
           
 
       - name: Docker Hub Description
