--- a/.github/workflows/publish_to_docker_hub.yml
+++ b/.github/workflows/publish_to_docker_hub.yml
@@ -2,6 +2,11 @@ name: Publish Docker image
 on:
   release:
     types: [published]
+  push:
+    branches:
+      - 'master'
+    tags:
+      - '*'  
 jobs:
   push_to_registry:
     name: Push Docker image to Docker Hub
@@ -19,7 +24,8 @@ jobs:
 
       - name: Login to DockerHub
         uses: docker/login-action@v1
-        with:          
+        with:
+          registry: ghcr.io          
           username: ${{ secrets.DOCKER_HUB_LOGIN }}
           password: ${{ secrets.DOCKER_HUB_PASSWORD }}      
 
@@ -32,7 +38,11 @@ jobs:
           context: .
           file: ./Dockerfile          
           platforms: linux/amd64
-          build-args: BUILD_ENV=development
+          build-args: |
+            BUILD_ENV=development
+            VERSION=${{ steps.prep.outputs.version }}
+            BUILD_DATE=${{ steps.prep.outputs.build_date }}
+            VCS_REF=${{ steps.prep.outputs.vcs_ref }}
           
 
       - name: Docker Hub Description
