--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 RASA_X_VERSION=			0.34.0
-RASA_VERSION=			2.1.2
+RASA_VERSION=			2.1.3
 RASA_CORE_VERSION=		stable
 RASA_CORESDK_VERSION=	0.13.1
 RASA_TOKEN=				G@77@Ch@7607_token
@@ -13,9 +13,9 @@ DB_PASSWORD=			G@77@Ch@7607_DB
 REDIS_PASSWORD=			G@77@Ch@7607_REDIS
 RASA_X_DEMO_VERSION= 	0.34.0
 RASA_NLU_HOST= 			http://localhost:5000
-RASA_PRODUCTION_HOST=	http://localhost:5005
-RASA_WORKER_HOST=		http://localhost:5005
-RASA_X_HOST=			http://localhost:5002
-RASA_USER_APP_HOST= 	http://localhost:5055
-RASA_DUCKLING_HTTP_HOST = http://localhost:8000
+RASA_PRODUCTION_HOST=	http://rasa-production:5005
+RASA_WORKER_HOST=		http://rasa-worker:5005
+RASA_X_HOST=			http://rasa-x:5002
+RASA_USER_APP_HOST= 	http://app:5055
+RASA_DUCKLING_HTTP_HOST = http://duckling:8000
 VAR_RASA_TELEMETRY_ENABLED=false
