--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,17 +19,17 @@ x-redis-credentials: &redis-credentials
   REDIS_DB: "1"
 
 x-duckling-credentials: &duckling-credentials
-  RASA_DUCKLING_HTTP_URL: ${RASA_DUCKLING_HTTP_HOST}
+  RASA_DUCKLING_HTTP_URL: "http://duckling:8000"
 
 x-rasax-credentials: &rasax-credentials
-  RASA_X_HOST: ${RASA_X_HOST}
+  RASA_X_HOST: "http://rasa-x:5002"
   RASA_X_USERNAME: ${RASA_X_USERNAME:-admin}
   RASA_X_PASSWORD: ${RASA_X_PASSWORD:-}
   RASA_X_TOKEN: ${RASA_X_TOKEN}
   JWT_SECRET: ${JWT_SECRET}
-  RASA_USER_APP: ${RASA_USER_APP_HOST}
-  RASA_PRODUCTION_HOST: ${RASA_PRODUCTION_HOST}
-  RASA_WORKER_HOST: ${RASA_WORKER_HOST}
+  RASA_USER_APP: "http://app:5055"
+  RASA_PRODUCTION_HOST: "http://rasa-production:5005"
+  RASA_WORKER_HOST: "http://rasa-worker:5005"
   RASA_TOKEN: ${RASA_TOKEN}
 
 x-rasa-credentials: &rasa-credentials
@@ -54,7 +54,7 @@ x-rasa-services: &default-rasa-service
     x
     --no-prompt
     --production
-    --config-endpoint ${RASA_X_HOST}/api/config?token=${RASA_X_TOKEN}
+    --config-endpoint http://rasa-x:5002/api/config?token=${RASA_X_TOKEN}
     --port 5005
     --jwt-method HS256
     --jwt-secret ${JWT_SECRET}
@@ -69,7 +69,6 @@ services:
   rasa-x:
     restart: always
     image: "rasa/rasa-x:${RASA_X_VERSION}"
-    networks: ['rasa-network']
     expose:
       - "5002"
     volumes:
@@ -96,8 +95,7 @@ services:
   db-migration:
     command: ["python", "-m", "rasax.community.services.db_migration_service"]
     restart: always
-    image: "rasa/rasa-x:${RASA_X_VERSION}"    
-    networks: ['rasa-network']
+    image: "rasa/rasa-x:${RASA_X_VERSION}"
     healthcheck:
       test: ["CMD-SHELL", "curl -f http://localhost:8000/health || kill 1"]
       interval: 5s
@@ -119,7 +117,7 @@ services:
       RASA_ENVIRONMENT: "production"
       DB_DATABASE: "tracker"
       MPLCONFIGDIR: "/tmp/.matplotlib"
-      RASA_MODEL_SERVER: "${RASA_X_HOST}/api/projects/default/models/tags/production"
+      RASA_MODEL_SERVER: "http://rasa-x:5002/api/projects/default/models/tags/production"
 
   rasa-worker:
     <<: *default-rasa-service
@@ -128,12 +126,11 @@ services:
       RASA_ENVIRONMENT: "worker"
       DB_DATABASE: "worker_tracker"
       MPLCONFIGDIR: "/tmp/.matplotlib"
-      RASA_MODEL_SERVER: "${RASA_X_HOST}/api/projects/default/models/tags/production"
+      RASA_MODEL_SERVER: "http://rasa-x:5002/api/projects/default/models/tags/production"
 
   app:
     restart: always
     image: "rasa/rasa-x-demo:${RASA_X_DEMO_VERSION}"
-    networks: ['rasa-network']
     expose:
       - "5055"
     depends_on:
@@ -142,7 +139,6 @@ services:
   db:
     restart: always
     image: "bitnami/postgresql:11.9.0"
-    networks: ['rasa-network']
     expose:
       - "5432"
     environment:
@@ -155,7 +151,6 @@ services:
   rabbit:
     restart: always
     image: "bitnami/rabbitmq:3.8.9"
-    networks: ['rasa-network']
     environment:
       RABBITMQ_HOST: "rabbit"
       RABBITMQ_USERNAME: "user"
@@ -167,7 +162,6 @@ services:
   duckling:
     restart: always
     image: "rasa/duckling:0.1.6.4"
-    networks: ['rasa-network']
     expose:
       - "8000"
     command: ["duckling-example-exe", "--no-access-log", "--no-error-log"]
@@ -179,12 +173,12 @@ services:
       - "80:8080"
       - "443:8443"
     volumes:
-      - ./certs:/etc/rasa/certs
-      - ./terms:/etc/rasa/terms      
+      - ./certs:/opt/bitnami/certs
+      - ./terms:/opt/bitnami/nginx/conf/bitnami/terms
     depends_on:
       - rasa-x
       - rasa-production
-      - app     
+      - app
 
   redis:
     restart: always
@@ -193,6 +187,3 @@ services:
       REDIS_PASSWORD: ${REDIS_PASSWORD}
     expose:
       - "6379"
-    networks: ['rasa-network']  
-
-networks: {rasa-network: {}}
